src/test/resources/invalid/semanticErr/loops/doWhileConditionType.wacc
# do-while should have boolean condition

# Output:
# #empty#

# Exit:
# 200

# Program:

begin
  do
    skip
  while 1 + 2 done
end